# SmarterEyeSDK

./: .gitignore  CMakeLists.txt  README.md  smarter_eye_sdk-config.cmake.in
cmake/: find_qt.cmake
docs/: README.md  _sidebar.md  changelog.md  index.html
docs/algorithm/: calibration.md  lane.md  obstacle.md
docs/api/: camera_handler.md  image_utils.md  stereo_camera.md
docs/ros/: README.md  about.md  extend.md
docs/samples/: Disparity2RGBDemo.md  Disparity2Real3dDemo.md  DisplayFramesDemo.md  FirmwareUpdateDemo.md  GetCameraParamDemo.md  GetCompoundDemo.md  GetLaneExtDemo.md  GetMotionDataDemo.md  README.md  StereoCameraDemo.md
docs/setup/: env.md
include/smarter_eye_sdk/: camerahandler.h  motiondata.h  motiondatahandler.h  sedevicestate.h  stereocamera.h
reps/: DeviceController.rep  DeviceReporter.rep  MotionData.rep
samples/: CMakeLists.txt  common.cmake  find_opencv.cmake  find_pcl.cmake
samples/Disparity2RGBDemo/: CMakeLists.txt
samples/Disparity2Real3dDemo/: CMakeLists.txt
samples/DisplayFramesDemo/: CMakeLists.txt  framemonitor.cpp  main.cpp
samples/FirmwareUpdateDemo/: CMakeLists.txt  main.cpp  mycamerahandler.cpp  mycamerahandler.h
samples/GetCameraParamDemo/: CMakeLists.txt
samples/GetCompoundDemo/: CMakeLists.txt
samples/GetLaneExtDemo/: CMakeLists.txt  main.cpp  mycamerahandler.cpp  mycamerahandler.h
samples/GetMotionDataDemo/: CMakeLists.txt  main.cpp  mycamerahandler.cpp  mycamerahandler.h
samples/PointCloudDemo/: CMakeLists.txt  main.cpp  mycamerahandler.cpp  mycamerahandler.h  pcviewer.cpp  pcviewer.h
samples/StereoCameraDemo/: CMakeLists.txt
src/ImageUtils/: disparityconvertor.cpp
src/Satp/: connector.cpp
src/StereoCamera/: devicestatus.cpp  devicestatus.h  firmwareupdater.cpp  firmwareupdater.h  framereceiver.cpp  motiondatareceiver.cpp  motiondatareceiver.h  sedevicestate.cpp  stereocamera.cpp  stereocameraimpl.cpp  stereocameraimpl.h
wrapper/ros/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
wrapper/ros/devel/include/zkhy_stereo_d/: CameraParams.h  CameraParamsRequest.h  CameraParamsResponse.h  RotationMatrix.h  RotationMatrixRequest.h  RotationMatrixResponse.h
wrapper/ros/devel/lib/pkgconfig/: zkhy_stereo_d.pc
wrapper/ros/devel/lib/python2.7/dist-packages/zkhy_stereo_d/srv/: _CameraParams.py  _RotationMatrix.py  __init__.py
wrapper/ros/devel/lib/zkhy_stereo_d/: stereo_listener  stereo_publisher
wrapper/ros/devel/share/common-lisp/ros/zkhy_stereo_d/srv/: CameraParams.lisp  RotationMatrix.lisp  _package.lisp  _package_CameraParams.lisp  _package_RotationMatrix.lisp  zkhy_stereo_d-srv.asd
wrapper/ros/devel/share/gennodejs/ros/zkhy_stereo_d/srv/: CameraParams.js  RotationMatrix.js  _index.js
wrapper/ros/devel/share/roseus/ros/zkhy_stereo_d/: manifest.l
wrapper/ros/devel/share/roseus/ros/zkhy_stereo_d/srv/: CameraParams.l  RotationMatrix.l
wrapper/ros/devel/share/zkhy_stereo_d/cmake/: zkhy_stereo_d-msg-extras.cmake  zkhy_stereo_d-msg-paths.cmake  zkhy_stereo_dConfig.cmake
wrapper/ros/src/zkhy_stereo_d/: CMakeLists.txt
wrapper/ros/src/zkhy_stereo_d/src/: framemonitor.cpp  pointcloudgenerator.cpp  stereo_publisher.cpp  stereo_publisher.h
